--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v-img",
+  "name": "@bencomeau/v-img",
   "version": "0.2.0",
   "description": "Vuejs plugin for image viewing",
   "main": "dist/v-img.js",
