--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bencomeau/v-img",
+  "name": "bencomeau-v-img",
   "version": "0.1.0",
   "description": "VueJS plugin forked from v-img with minor modifications",
   "main": "dist/v-img.js",
